RESOLVED FIXED12578
WebKit incorrectly strokes zero-width/height rectangles
https://bugs.webkit.org/show_bug.cgi?id=12578
Summary WebKit incorrectly strokes zero-width/height rectangles
Eric Seidel (no email)
Reported 2007-02-04 03:54:44 PST
WebKit incorrectly strokes zero-width/height rectangles I'm not sure why this is incorrect, but the W3C test seems to suggest we're wrong here. Firefox and Opera both agree with the W3C results on the two sub-tests we fail here.
Attachments
First attempt (58.74 KB, patch)
2007-02-13 02:44 PST, Rob Buis
mjs: review+
Eric Seidel (no email)
Comment 1 2007-02-04 03:55:46 PST
Rob Buis
Comment 2 2007-02-13 02:44:29 PST
Created attachment 13148 [details] First attempt This should be a simple but worthwhile fix. Cheers, Rob.
Maciej Stachowiak
Comment 3 2007-02-13 02:53:43 PST
Seems low risk and improves correctness. r=me
Rob Buis
Comment 4 2007-02-13 03:13:20 PST
Landed in r19600.
Note You need to log in before you can comment on or make changes to this bug.