        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=12578
        WebKit incorrectly strokes zero-width/height rectangles

        Create an empty path when encountering zero-width/height rectangles, similar to circles with zero radius.



Canonical link: https://commits.webkit.org/16478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19600 268f45cc-cd09-0410-ab3c-d52691b4dbfc